# mm-backend

./: .env.sample  .gitignore  Cargo.toml  docker-compose.yaml
.github/workflows/: checks.yml
.sqlx/: query-33c248ade424eb6d11e702fc52767edc2d4f8fb3dd330f77dcc33c58112b3f53.json  query-57f4b445230e637c5020e6f99b9abf99a9982fbccc28dab94f3f12c9fe346005.json  query-688e013703a1951f0c6379a4bab253f2f9ea4447bec071ed7b93fc6e63186cc8.json  query-6c0d4e8166ccdc3d08a693ae7d2be6057ecb3a869140b4de5131c1a1ddb7ced0.json  query-6cd91aec5d9b34557fd22dd41c064b67f5233f75729585d95fb9a52772d6a19a.json  query-79a9506ef7c120ec7eaf1521efd7e5d780b92122d3546f897ba1000db4306eff.json  query-85f453c1b965ce69fcd71fd8c52e57e7716ca7ab90be724b366be5bcd132f192.json  query-aed7f90fbb3fb4a4fe204aa59cae042c346cef70ecb5730ccc3be138efaae09e.json  query-b9b77870365466464ede0530fcde294c060df31d40c4c09a7bbf81a87a2de970.json  query-c3834315b24aae42a416353241a9093c1cc7e60602d62628710b4f73a59aef61.json  query-db2a0e5355ed077b71bf08191ff69e9a1f887089521278193df3c3a947d323d9.json  query-e898496a7e6a76d613d129fc614001e124453bb1c31c5493169ea7eef9bb1a36.json
data/postgres/: init.sql
db/: init.sql
deploy/: backend.Dockerfile  compose.yml
src/: config.rs  context.rs  error.rs  errors.rs  main.rs  models.rs  routes.rs
src/auth/: handlers.rs  jwt.rs  mod.rs
src/course/: handlers.rs
src/db/: core.rs  course.rs  discipline.rs  entity.rs  mod.rs  users.rs
src/discipline/: handlers.rs
src/handlers/: auth.rs
src/utils/: core.rs  error.rs  jwt.rs  mod.rs
